--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0",
+    "@hookform/resolvers": "^3.1.0",
+    "react-chat-widget": "^3.1.4",
+    "react-split-pane": "^0.1.92"
   },
   "devDependencies": {
     "vite": "^4.5.14",
