--- a/package.json
+++ b/package.json
@@ -2,28 +2,18 @@
   "name": "resume-frontend",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.0",
-    "@hookform/resolvers": "^3.1.0",
-    "react-chat-widget": "^3.1.4",
-    "react-split-pane": "^0.1.92"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^4.5.14",
-    "@vitejs/plugin-react": "^4.0.0",
-    "tailwindcss": "^4.0.0",
-    "@tailwindcss/postcss": "^4.0.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "typescript": "^5.0.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10"
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^6.0.0"
   }
 }
